# AttendanceTracking

./: .gitignore  .sample.env  README.md  database.py  main.py  pyproject.toml  shell.nix
backend/: pyproject.toml  shell.nix
backend/app/: main.py
backend/app/api/: main.py
backend/app/api/routes/: attendance.py  communities.py  customers.py  dbtest.py  employees.py  events.py
backend/app/core/: config.py  db.py
backend/app/models/: attendance.py  communities.py  customers.py  employees.py  events.py
backend/app/schemas/: attendance.py  communities.py  customers.py  employees.py  events.py
