[project]
name = "attendance"
version = "0.1.0"
description = "An Attendance Tracking System "

requires-python = ">=3.10"

dependencies = [
  "fastapi[standard]",
  "sqlalchemy[asyncio]",
  "uvicorn",
  "python-dotenv",
  "pydantic",
  "pydantic-settings",
  "psycopg[binary]",
]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "pre-commit"
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
namespace = true
